fixing overflow bug for URLs on campaign summary

--- a/targetadmin/static/css/campaign_summary.css
+++ b/targetadmin/static/css/campaign_summary.css
@@ -19,6 +19,6 @@
     margin-bottom: 0px;
 }
 
-.image-url-container {
+.url-container {
     overflow: hidden;
 }
